--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,10 @@
     padding: 0 !important;
     margin: 0 !important;
 }
+
 #navbar {
     height:100px;
-    background-color: #000596;
+    background-color: #102B64;
     color: #ffe700;
 }
 
