--- a/css/cssadm.css
+++ b/css/cssadm.css
@@ -114,4 +114,7 @@ text-decoration: underline;
 .alertmss 
 {
  background-color: #FDFABD;
+ margin-top: 1%;
+ border-radius: 10px;
+ padding: 1% 1% 1% 1%;
 }
